src/objects/Association_CPA_Order_Delivery_Basket__c.object
<CustomObject>
    <fields>
        <fullName>Association_CPA_Order_Delivery__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Association CPA Order Delivery</label>
        <referenceTo>Association_CPA_Order_Delivery__c</referenceTo>
        <relationshipLabel>Association CPA Order Delivery Baskets</relationshipLabel>
        <relationshipName>Association_CPA_Order_Delivery_Baskets</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <picklist>
            <picklistValues>
                <fullName>Semillas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coophsur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASOAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aproborca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Si se puede</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>La 14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ofimovil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alsur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gran Tescual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Association CPA Order Delivery Basket</label>
    <nameField>
        <displayFormat>ADB-{YYYY}{MM}{DD}-{0}</displayFormat>
        <label>Association CPA Order Delivery Basket Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Association CPA Order Delivery Baskets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>